deploy: 22945c5a4fc2aeaf6f1479d35162b26d0fe88e10

--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
   "@type": "WebSite",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "https://digital-botanical-gardens-initiative.io?q={search_term_string}",
+    "target": "https://digital-botanical-gardens-initiative.io/?q={search_term_string}",
     "query-input": "required name=search_term_string"
   },
-  "url": "https://digital-botanical-gardens-initiative.io"
+  "url": "https://digital-botanical-gardens-initiative.io/"
 }
 </script>
 
