--- a/tour/index.html
+++ b/tour/index.html
@@ -760,7 +760,7 @@
       
    
 
-  <div class="carousel-item active fullscreen" style=" background-color: #666;background-image: url(&#39;https://digital-botanical-gardens-initiative.github.io/media/coders.jpg&#39;); background-repeat: no-repeat; background-position: right; background-size: cover; ">
+  <div class="carousel-item active fullscreen" style=" background-color: #666;background-image: url(&#39;https://digital-botanical-gardens-initiative.github.io/media/dbgi_metasequoia.jpeg&#39;); background-repeat: no-repeat; background-position: right; background-size: cover; ">
     <div class="position-absolute d-flex w-100 h-100 justify-content-center align-items-center" style="-webkit-backdrop-filter: brightness(0.7); backdrop-filter: brightness(0.7);">
       
       <div class="wg-hero dark container" style="margin-left: 6rem; margin-right: 6rem; text-align: center;">
