--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
   <meta name="description" content="A highly-customizable Hugo research group theme powered by Wowchemy website builder." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://digital-botanical-gardens-initiative.github.io/404.html" />
+  <link rel="alternate" hreflang="en-us" href="https://www.dbgi.org/404.html" />
 
   
   
@@ -268,7 +268,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_32x32_fill_lanczos_center_3.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_180x180_fill_lanczos_center_3.png" />
 
-  <link rel="canonical" href="https://digital-botanical-gardens-initiative.github.io/404.html" />
+  <link rel="canonical" href="https://www.dbgi.org/404.html" />
 
   
   
@@ -294,10 +294,10 @@
     <meta property="twitter:creator" content="@wowchemy" />
   
   <meta property="og:site_name" content="The DBGI" />
-  <meta property="og:url" content="https://digital-botanical-gardens-initiative.github.io/404.html" />
+  <meta property="og:url" content="https://www.dbgi.org/404.html" />
   <meta property="og:title" content="404 Page not found | The DBGI" />
-  <meta property="og:description" content="A highly-customizable Hugo research group theme powered by Wowchemy website builder." /><meta property="og:image" content="https://digital-botanical-gardens-initiative.github.io/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
-    <meta property="twitter:image" content="https://digital-botanical-gardens-initiative.github.io/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="A highly-customizable Hugo research group theme powered by Wowchemy website builder." /><meta property="og:image" content="https://www.dbgi.org/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+    <meta property="twitter:image" content="https://www.dbgi.org/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
   
