deploy: aba3532caaac25db5930012678bc8357ec279c73

--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -49,7 +49,7 @@
   
   
 
-  <meta name="author" content="Nelson Bighetti" />
+  <meta name="author" content="Emmanuel Defossez" />
 
   
   
@@ -719,7 +719,7 @@
         
 
   <span >
-      <a href="/author/nelson-bighetti/">Nelson Bighetti</a></span>
+      <a href="/author/admin/">admin</a></span>
       </div>
       
     </div>
