--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -49,7 +49,7 @@
   
   
 
-  <meta name="author" content="Nelson Bighetti" />
+  <meta name="author" content="Emmanuel Defossez" />
 
   
   
@@ -719,7 +719,7 @@
         
 
   <span >
-      <a href="/author/nelson-bighetti/">Nelson Bighetti</a></span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      <a href="/author/admin/">admin</a></span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       <a href="/author/robert-ford/">Robert Ford</a></span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
       </div>
       
