--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
       
    
 
-  <div class="carousel-item fullscreen" style=" background-color: #333;background-image: url(&#39;https://www.dbgi.org/media/welcome.jpg&#39;); background-repeat: no-repeat; background-position: center; background-size: cover; ">
+  <div class="carousel-item fullscreen" style=" background-color: #333;background-image: url(&#39;https://www.dbgi.org/media/morning_garden.jpg&#39;); background-repeat: no-repeat; background-position: center; background-size: cover; ">
     <div class="position-absolute d-flex w-100 h-100 justify-content-center align-items-center" style="-webkit-backdrop-filter: brightness(0.2); backdrop-filter: brightness(0.2);">
       
       <div class="wg-hero dark container" style="margin-left: 6rem; margin-right: 6rem; text-align: right;">
