deploy: 22fd28f2a6f18af7e4b083d2f2fc23ed2e77ca54

--- a/about/index.html
+++ b/about/index.html
@@ -59,7 +59,7 @@
   <meta name="description" content="" />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://www.dbgi.org/tour/" />
+  <link rel="alternate" hreflang="en-us" href="https://www.dbgi.org/about/" />
 
   
   
@@ -272,7 +272,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_32x32_fill_lanczos_center_3.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_180x180_fill_lanczos_center_3.png" />
 
-  <link rel="canonical" href="https://www.dbgi.org/tour/" />
+  <link rel="canonical" href="https://www.dbgi.org/about/" />
 
   
   
@@ -298,8 +298,8 @@
     <meta property="twitter:creator" content="@wowchemy" />
   
   <meta property="og:site_name" content="The DBGI" />
-  <meta property="og:url" content="https://www.dbgi.org/tour/" />
-  <meta property="og:title" content="Tour | The DBGI" />
+  <meta property="og:url" content="https://www.dbgi.org/about/" />
+  <meta property="og:title" content="About | The DBGI" />
   <meta property="og:description" content="" /><meta property="og:image" content="https://www.dbgi.org/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://www.dbgi.org/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
@@ -321,11 +321,11 @@
 
 
 
-  <title>Tour | The DBGI</title>
+  <title>About | The DBGI</title>
 </head>
 
 
-<body id="top" data-spy="scroll" data-offset="70" data-target="#TableOfContents" class="page-wrapper   " data-wc-page-id="b0d61e5cbb7472bf320bf0ef2aaeb977" >
+<body id="top" data-spy="scroll" data-offset="70" data-target="#TableOfContents" class="page-wrapper   " data-wc-page-id="8576ec274c98b3831668a172fa632d80" >
 
   
   
@@ -447,7 +447,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/tour" data-target="[]"><span>Tour</span></a>
+            <a class="nav-link " href="/tour"><span>Tour</span></a>
           </li>
 
           
