deploy: 24559233280c6828c790c3cd7d58fd2498ab2b79

--- a/course/data-science/visualization/index.html
+++ b/course/data-science/visualization/index.html
@@ -730,7 +730,7 @@
       
 
       <ul class="nav docs-sidenav">
-        <li><a href="/course/"><i class="fas fa-arrow-left pr-1"></i>📚 Courses</a></li>
+        <li><a href="/course/"><i class="fas fa-arrow-left pr-1"></i>📚 Research proposal</a></li>
       </ul>
 
       
