--- a/course/index.html
+++ b/course/index.html
@@ -297,7 +297,7 @@
   
   <meta property="og:site_name" content="The DBGI" />
   <meta property="og:url" content="https://www.dbgi.org/course/" />
-  <meta property="og:title" content="📚 Courses | The DBGI" />
+  <meta property="og:title" content="📚 Research proposal | The DBGI" />
   <meta property="og:description" content="A highly-customizable Hugo research group theme powered by Wowchemy website builder." /><meta property="og:image" content="https://www.dbgi.org/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://www.dbgi.org/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
@@ -318,7 +318,7 @@
 
 
 
-  <title>📚 Courses | The DBGI</title>
+  <title>📚 Research proposal | The DBGI</title>
 </head>
 
 
@@ -694,7 +694,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>📚 Courses</h1>
+  <h1>📚 Research proposal</h1>
 
   
 
