--- a/course/robotics/visualization/index.html
+++ b/course/robotics/visualization/index.html
@@ -730,7 +730,7 @@
       
 
       <ul class="nav docs-sidenav">
-        <li><a href="/course/"><i class="fas fa-arrow-left pr-1"></i>📚 Courses</a></li>
+        <li><a href="/course/"><i class="fas fa-arrow-left pr-1"></i>📚 Research proposal</a></li>
       </ul>
 
       
