--- a/404.html
+++ b/404.html
@@ -620,7 +620,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/course"><span>Courses</span></a>
+            <a class="nav-link " href="/course"><span>Research proposal</span></a>
           </li>
 
           
