--- a/course/white-paper/python/index.html
+++ b/course/white-paper/python/index.html
@@ -628,7 +628,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/course"><span>Courses</span></a>
+            <a class="nav-link " href="/course"><span>Research proposal</span></a>
           </li>
 
           
