--- a/publication/conference-paper/index.html
+++ b/publication/conference-paper/index.html
@@ -672,7 +672,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/course"><span>Courses</span></a>
+            <a class="nav-link " href="/course"><span>Research proposal</span></a>
           </li>
 
           
