deploy: c2eb249af228b7129486a1a94cba5f97b6373aa1

--- a/course/white-paper/index.html
+++ b/course/white-paper/index.html
@@ -296,7 +296,7 @@
   
   <meta property="og:site_name" content="The Digital Botanical Gardens Initiative" />
   <meta property="og:url" content="https://www.dbgi.org/course/white-paper/" />
-  <meta property="og:title" content="📊 DBGI White Paper | The Digital Botanical Gardens Initiative" />
+  <meta property="og:title" content="📄 DBGI White Paper | The Digital Botanical Gardens Initiative" />
   <meta property="og:description" content="An example of using Wowchemy&#39;s Book layout for publishing online courses." /><meta property="og:image" content="https://www.dbgi.org/course/white-paper/featured.jpg" />
     <meta property="twitter:image" content="https://www.dbgi.org/course/white-paper/featured.jpg" /><meta property="og:locale" content="en-us" />
   
@@ -317,7 +317,7 @@
 
 
 
-  <title>📊 DBGI White Paper | The Digital Botanical Gardens Initiative</title>
+  <title>📄 DBGI White Paper | The Digital Botanical Gardens Initiative</title>
 </head>
 
 
@@ -797,7 +797,7 @@
         <div class="docs-article-container">
           
 
-          <h1>📊 DBGI White Paper</h1>
+          <h1>📄 DBGI White Paper</h1>
 
           <div class="article-style">
             
