deploy: 15f7d6cf08f8e103fd8a08198c4dae01222a37e4

--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
 
           
           <p class="hero-lead" style="margin-left: auto; margin-right: 0">
-            Meet the DBGI consortium !
+            Meet the DBGI consortium ! {{&lt; chart data=&ldquo;inat&rdquo; &gt;}}
           </p>
           
 
