--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
 
           
           <p class="hero-lead" style="margin-left: auto; margin-right: 0">
-            Meet the DBGI consortium ! {{&lt; chart data=&ldquo;inat&rdquo; &gt;}}
+            Meet the DBGI consortium !
           </p>
           
 
