deploy: de35e13dddb1697af24dffbe0790e0a9aa9588c3

--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
 
           
           <p class="hero-lead" style="margin-left: auto; margin-right: 0">
-            Meet the DBGI consortium ! And check this data  {{&lt; chart data=&ldquo;inat&rdquo; &gt;}}
+            Meet the DBGI consortium ! And check this data  {{&lt; chart data=&ldquo;inat.json&rdquo; &gt;}}
           </p>
           
 
