--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
 
           
           <p class="hero-lead" style="margin-left: auto; margin-right: 0">
-            Meet the DBGI consortium ! And check this data  {{&lt; chart data=&ldquo;inat&rdquo; &gt;}}
+            Meet the DBGI consortium !
           </p>
           
 
