deploy: 9b6646249026080f41fd42404a7f961e53967ab4

--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 
           
           <p class="hero-lead" style="margin: 0 auto 0 auto;">
-            An Open Science initiative to explore and establish robust and scalable workflows for the digitization of chemo and biodiversity at a global scale in wild ecosystems.
+            <em>An Open Science initiative to explore and establish robust and scalable workflows for the digitization of chemo and biodiversity at a global scale in wild ecosystems.</em>
           </p>
           
 
