deploy: ce08e69fb464b404856aca8b2c43ef42967b436a

--- a/course/robotics/stats/index.html
+++ b/course/robotics/stats/index.html
@@ -293,8 +293,8 @@
   
   <meta property="twitter:card" content="summary" />
   
-    <meta property="twitter:site" content="@wowchemy" />
-    <meta property="twitter:creator" content="@wowchemy" />
+    <meta property="twitter:site" content="@allard_pm" />
+    <meta property="twitter:creator" content="@allard_pm" />
   
   <meta property="og:site_name" content="The Digital Botanical Gardens Initiative" />
   <meta property="og:url" content="https://www.dbgi.org/course/robotics/stats/" />
@@ -769,7 +769,7 @@ The variance of the distribution is $\sigma^{2}$.
 
   
   <p class="powered-by copyright-license-text">
-    © 2022 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    This website is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
