--- a/publication/preprint/index.html
+++ b/publication/preprint/index.html
@@ -289,8 +289,8 @@
   
   <meta property="twitter:card" content="summary_large_image" />
   
-    <meta property="twitter:site" content="@wowchemy" />
-    <meta property="twitter:creator" content="@wowchemy" />
+    <meta property="twitter:site" content="@allard_pm" />
+    <meta property="twitter:creator" content="@allard_pm" />
   
   <meta property="og:site_name" content="The Digital Botanical Gardens Initiative" />
   <meta property="og:url" content="https://www.dbgi.org/publication/preprint/" />
@@ -980,7 +980,7 @@
 
   
   <p class="powered-by copyright-license-text">
-    © 2022 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    This website is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
