deploy: 465939dce0f277c8bd5fc382c137d29cb377b046

--- a/work-in-progress/index.html
+++ b/work-in-progress/index.html
@@ -630,7 +630,7 @@
 Expect to find strange ideas, badly formulated text and poorly written code. However if you have time and interest you should be able to observe and participate at each step of the process. When we take notes these are meant for others but also for us, in the future. Hopefully this will lead to enhanced collaboration and participation. Maybe yes, maybe not. We are making it a methodological experiment !</p>
 <h2 id="code">Code</h2>
 <p>The code written in the frame of the DBGI is versioned and centralized under the following Github organization <a href="https://github.com/digital-botanical-gardens-initiative" target="_blank" rel="noopener">https://github.com/digital-botanical-gardens-initiative</a>.
-Feel free to raise an issue on the corresponding repositories if you have any question, comment or suggestion on the code.</p>
+Feel free to raise an issue on the corresponding repositories if you have any question, comment or suggestion on the code. We see this github organization as a place for everybody to learn ! We are looking forward for your inputs.</p>
 
     </div>
 
