--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@
   
     
   
-  <meta name="description" content="An Open Science initiative to explore and establish robust and scalable workflows for the digitization of chemo- and biodiversity, at the global scale in wild ecosystems." />
+  <meta name="description" content="DBGI Initiator" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://www.dbgi.org/404.html" />
@@ -244,6 +244,45 @@
 
 
 
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M4H5MS3B2Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+      dataLayer.push(arguments);
+  }
+
+  function trackOutboundLink(url, target) {
+    gtag('event', 'click', {
+         'event_category': 'outbound',
+         'event_label': url,
+         'transport_type': 'beacon',
+         'event_callback': function () {
+           if (target !== '_blank') {
+             document.location = url;
+           }
+         }
+    });
+    console.debug("Outbound link clicked: " + url);
+  }
+
+  function onClickCallback(event) {
+    if ((event.target.tagName !== 'A') || (event.target.host === window.location.host)) {
+      return;
+    }
+    trackOutboundLink(event.target, event.target.getAttribute('target'));  
+  }
+
+  gtag('js', new Date());
+  gtag('config', 'G-M4H5MS3B2Y', {});
+  gtag('set', {'cookie_flags': 'SameSite=None;Secure'});
+
+  
+  document.addEventListener('click', onClickCallback, false);
+</script>
+
+
   
 
 
@@ -290,13 +329,10 @@
   
   <meta property="twitter:card" content="summary" />
   
-    <meta property="twitter:site" content="@allard_pm" />
-    <meta property="twitter:creator" content="@allard_pm" />
-  
   <meta property="og:site_name" content="The Digital Botanical Gardens Initiative" />
   <meta property="og:url" content="https://www.dbgi.org/404.html" />
   <meta property="og:title" content="404 Page not found | The Digital Botanical Gardens Initiative" />
-  <meta property="og:description" content="An Open Science initiative to explore and establish robust and scalable workflows for the digitization of chemo- and biodiversity, at the global scale in wild ecosystems." /><meta property="og:image" content="https://www.dbgi.org/media/icon_hu2fb6469703408137963092c86773317f_33056_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="DBGI Initiator" /><meta property="og:image" content="https://www.dbgi.org/media/icon_hu2fb6469703408137963092c86773317f_33056_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://www.dbgi.org/media/icon_hu2fb6469703408137963092c86773317f_33056_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
