--- a/course/white-paper/python/index.html
+++ b/course/white-paper/python/index.html
@@ -244,6 +244,45 @@
 
 
 
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M4H5MS3B2Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+      dataLayer.push(arguments);
+  }
+
+  function trackOutboundLink(url, target) {
+    gtag('event', 'click', {
+         'event_category': 'outbound',
+         'event_label': url,
+         'transport_type': 'beacon',
+         'event_callback': function () {
+           if (target !== '_blank') {
+             document.location = url;
+           }
+         }
+    });
+    console.debug("Outbound link clicked: " + url);
+  }
+
+  function onClickCallback(event) {
+    if ((event.target.tagName !== 'A') || (event.target.host === window.location.host)) {
+      return;
+    }
+    trackOutboundLink(event.target, event.target.getAttribute('target'));  
+  }
+
+  gtag('js', new Date());
+  gtag('config', 'G-M4H5MS3B2Y', {});
+  gtag('set', {'cookie_flags': 'SameSite=None;Secure'});
+
+  
+  document.addEventListener('click', onClickCallback, false);
+</script>
+
+
   
 
 
@@ -289,9 +328,6 @@
     
   
   <meta property="twitter:card" content="summary" />
-  
-    <meta property="twitter:site" content="@allard_pm" />
-    <meta property="twitter:creator" content="@allard_pm" />
   
   <meta property="og:site_name" content="The Digital Botanical Gardens Initiative" />
   <meta property="og:url" content="https://www.dbgi.org/course/white-paper/python/" />
