deploy: da82a425c65d723384a96ba8fe8e177ef30ec3a8

--- a/people/index.html
+++ b/people/index.html
@@ -1662,7 +1662,7 @@
       
     
     <li>
-      <a href="https://github.com/USERNAME" target="_blank" rel="noopener">
+      <a href="https://github.com/hluetck" target="_blank" rel="noopener">
         <i class="fab fa-github"></i>
       </a>
     </li>
