deploy: d72de7345fb0df2318542e48df539d7c45da0b43

--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
 
           
           <p class="hero-lead" style="margin: 0 auto 0 auto;">
-            <em>An Open Science initiative to explore and establish robust and scalable workflows for the digitization of chemo- and biodiversity, from botanicals collections to the global scale in wild ecosystems.</em>
+            <em>An Open Science initiative to explore and establish robust and scalable workflows for the digitization of chemo- and biodiversity, from botanical collections to the global scale in wild ecosystems.</em>
           </p>
           
 
