deploy: b7424e9ff1b947f78f46ca30dc0273ca35d975a9

--- a/work-in-progress/index.html
+++ b/work-in-progress/index.html
@@ -685,12 +685,15 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>In the frame of the DBGI we &ldquo;work with the garage door up&rdquo; as describes Andy Matuschak <a href="https://notes.andymatuschak.org/z21cgR9K3UcQ5a7yPsj2RUim3oM2TzdBByZu" target="_blank" rel="noopener">here</a>. When applying this idea to a scientific research endeavor we understand it as respecting the core concepts of Open Science. These are also the principles of <a href="https://en.wikipedia.org/wiki/Open-notebook_science" target="_blank" rel="noopener">Open Notebook Science</a></p>
+      <h2 id="our-main-goal">Our main goal</h2>
+<p>The DBGI has been established to craft the sample collection, sample tracking and data analysis workflows which will be required for the wider <a href="https://www.earthmetabolome.org" target="_blank" rel="noopener">Earth Metabolome Initiative</a>, and Open Science project aiming at characterizing and understanding the chemical diversity of the Earth&rsquo;s biosphere.</p>
+<h2 id="how-do-we-work-">How do we work ?</h2>
+<p>In the frame of the DBGI we &ldquo;work with the garage door up&rdquo; as describes Andy Matuschak <a href="https://notes.andymatuschak.org/z21cgR9K3UcQ5a7yPsj2RUim3oM2TzdBByZu" target="_blank" rel="noopener">here</a>. When applying this idea to a scientific research endeavor we understand it as respecting the core concepts of Open Science. These are also the principles of <a href="https://en.wikipedia.org/wiki/Open-notebook_science" target="_blank" rel="noopener">Open Notebook Science</a></p>
 <p>For the projects of the DBGI we will follow such approach in order to share early ideas and results but also the less shiny parts of the research projects. We share our early research outputs in several places.</p>
-<h2 id="ideas-notes-and-lab-notebook">Ideas, notes and lab notebook</h2>
+<h3 id="ideas-notes-and-lab-notebook">Ideas, notes and lab notebook</h3>
 <p>To gather these we use the <a href="https://www.dendron.so/" target="_blank" rel="noopener">Dendron</a> note managing system. The DBGI Dendron is reachable at <a href="https://www.dbgi.org/dendron-dbgi/" target="_blank" rel="noopener">https://www.dbgi.org/dendron-dbgi/</a>
 Expect to find strange ideas, badly formulated text and poorly written code. However if you have time and interest you should be able to observe and participate at each step of the process. When we take notes these are meant for others but also for us, in the future. Hopefully this will lead to enhanced collaboration and participation. Maybe yes, maybe not. We are making it a methodological experiment !</p>
-<h2 id="code">Code</h2>
+<h3 id="code">Code</h3>
 <p>The code written in the frame of the DBGI is versioned and centralized under the following Github organization <a href="https://github.com/digital-botanical-gardens-initiative" target="_blank" rel="noopener">https://github.com/digital-botanical-gardens-initiative</a>.
 Feel free to raise an issue on the corresponding repositories if you have any question, comment or suggestion on the code. We see this github organization as a place for everybody to learn ! We are looking forward for your inputs.</p>
 
